[package]
edition = "2021"
name = "hylo_banksy"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.5", features = ["napi4", "napi6", "async"] }
napi-derive = "2.12.5"
bincode = "1.3.3"
derive_more = "0.99.17"
serde_json = "1.0.59"
solana-banks-interface = "1.18.0"
solana-banks-client = "1.18.0"
solana-program = "1.18.0"
solana-test-framework = { git = "https://github.com/ivmidable/solana-test-framework", branch = "solana1.18" }
solana-sdk = "1.18.0"
solana-transaction-status = "1.18.0"
tarpc = { version = "0.29.0" }
tokio = { version = "1.14.1" }
toml = "0.7.3"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
